syntax = "proto3";
package com.seezoon;

option java_package = "com.seezoon";
// 默认自动转驼峰，有需求可以自定义
option java_outer_classname = "DistributedIdAo";
option java_multiple_files = false;
// 有复用的直接导入即可
// import "xxx.proto"

message DistributedIdReq{
  string bizTag = 1;
  string token = 2;
}

message DistributedIdResp{
  int64 value = 1;
}

service DistributedId {
  rpc Get(DistributedIdReq) returns (DistributedIdResp);
}


